{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 709,
  "lineage": "92df324c-623b-5361-293f-0c237c798ffd",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-vnet-fw-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "30000-40000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-01-04T01:50:35.150-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/gcdeveloper/global/firewalls/k8s-vnet-fw-external",
            "name": "k8s-vnet-fw-external",
            "network": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/global/networks/k8s-vnet-tf",
            "priority": 1000,
            "project": "gcdeveloper",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/global/firewalls/k8s-vnet-fw-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.k8s-vnet-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-vnet-fw-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "ipip"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-01-04T01:50:35.135-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/gcdeveloper/global/firewalls/k8s-vnet-fw-internal",
            "name": "k8s-vnet-fw-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/global/networks/k8s-vnet-tf",
            "priority": 1000,
            "project": "gcdeveloper",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/global/firewalls/k8s-vnet-fw-internal",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "k8s"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.k8s-vnet-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s-vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "gvisor",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1804-bionic-v20201216",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/zones/us-central1-a/disks/k8s-gvisor"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcdeveloper/zones/us-central1-a/instances/k8s-gvisor",
            "instance_id": "4938822452489665066",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "KdlX-XbZ8U8=",
            "metadata_startup_script": "#!/usr/bin/env bash\n# https://gvisor.dev/docs/user_guide/install\n# https://sbulav.github.io/certifications/cks-gvisor/\n\n# NET PREREQUISITES\ncat \u003c\u003cEOF | sudo tee /etc/modules-load.d/containerd.conf\noverlay\nbr_netfilter\nEOF\n\nsudo modprobe overlay\nsudo modprobe br_netfilter\n\n# Setup required sysctl params, these persist across reboots.\ncat \u003c\u003cEOF | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf\nnet.bridge.bridge-nf-call-iptabl [...]
            "name": "k8s-gvisor",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.122.101.240",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/global/networks/k8s-vnet-tf",
                "network_ip": "10.1.0.9",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/regions/us-central1/subnetworks/subnet-tf-10-1",
                "subnetwork_project": "gcdeveloper"
              }
            ],
            "project": "gcdeveloper",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/zones/us-central1-a/instances/k8s-gvisor",
            "service_account": [
              {
                "email": "536543243977-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s",
              "k8s-gvisor"
            ],
            "tags_fingerprint": "CgIEZDt4qzs=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.k8s-vnet-tf",
            "google_compute_subnetwork.subnet-10-1"
          ]
        },
        {
          "index_key": "master",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1804-bionic-v20201216",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/zones/us-central1-a/disks/k8s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcdeveloper/zones/us-central1-a/instances/k8s-master",
            "instance_id": "6886117563153996774",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "hjGWQZ0HSx8=",
            "metadata_startup_script": "# (Install Docker CE)\n## Set up the repository:\n### Install packages to allow apt to use a repository over HTTPS\napt-get update -y \u0026\u0026 sudo apt-get install -y \\\napt-transport-https ca-certificates curl software-properties-common gnupg2 vim strace binutils psmisc lsof\n# Add Docker's official GPG key:\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key --keyring /etc/apt/trusted.gpg.d/docker.gpg add -\n# Add the Docker apt  [...]
            "name": "k8s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.69.233.64",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/global/networks/k8s-vnet-tf",
                "network_ip": "10.1.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/regions/us-central1/subnetworks/subnet-tf-10-1",
                "subnetwork_project": "gcdeveloper"
              }
            ],
            "project": "gcdeveloper",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/zones/us-central1-a/instances/k8s-master",
            "service_account": [
              {
                "email": "536543243977-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s",
              "k8s-master"
            ],
            "tags_fingerprint": "f6vp69wOwTo=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.k8s-vnet-tf",
            "google_compute_subnetwork.subnet-10-1"
          ]
        },
        {
          "index_key": "worker-1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1804-bionic-v20201216",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/zones/us-central1-a/disks/k8s-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcdeveloper/zones/us-central1-a/instances/k8s-worker-1",
            "instance_id": "435645097713818598",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "B6AN0hZ3LFA=",
            "metadata_startup_script": "# (Install Docker CE)\n## Set up the repository:\n### Install packages to allow apt to use a repository over HTTPS\napt-get update -y \u0026\u0026 sudo apt-get install -y \\\napt-transport-https ca-certificates curl software-properties-common gnupg2 vim strace binutils psmisc lsof\n# Add Docker's official GPG key:\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key --keyring /etc/apt/trusted.gpg.d/docker.gpg add -\n# Add the Docker apt  [...]
            "name": "k8s-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.225.3.85",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/global/networks/k8s-vnet-tf",
                "network_ip": "10.1.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/regions/us-central1/subnetworks/subnet-tf-10-1",
                "subnetwork_project": "gcdeveloper"
              }
            ],
            "project": "gcdeveloper",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/zones/us-central1-a/instances/k8s-worker-1",
            "service_account": [
              {
                "email": "536543243977-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s",
              "k8s-worker-1"
            ],
            "tags_fingerprint": "kIuh9cL4bPs=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.k8s-vnet-tf",
            "google_compute_subnetwork.subnet-10-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "k8s-vnet-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/gcdeveloper/global/networks/k8s-vnet-tf",
            "name": "k8s-vnet-tf",
            "project": "gcdeveloper",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/global/networks/k8s-vnet-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-10-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-01-04T01:50:35.391-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/gcdeveloper/regions/us-central1/subnetworks/subnet-tf-10-1",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "subnet-tf-10-1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/global/networks/k8s-vnet-tf",
            "private_ip_google_access": false,
            "project": "gcdeveloper",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "podips"
              },
              {
                "ip_cidr_range": "10.3.0.0/16",
                "range_name": "serviceips"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcdeveloper/regions/us-central1/subnetworks/subnet-tf-10-1"
          },
          "dependencies": [
            "google_compute_network.k8s-vnet-tf"
          ]
        }
      ]
    }
  ]
}